# weather_cli_app

./: .env  Cargo.toml  README.md
src/: command.rs  lib.rs  main.rs  provider.rs  weather.rs
