[package]
name = "weather_cli_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
dotenvy = "0.15.6"
humantime = "2.1.0"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
